--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Styles/style.css">
     
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
@@ -9,6 +10,20 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="flex justify-around mx-auto h-24 max-w-screen-2xl bg-[#F9F7F3]">
+        <div class="flex items-center"> <button class="common-buttons">Blog</button> </div>
+        <div class="flex items-center justify-between w-80">
+            <img src="assets/logo.png" alt="">
+            <h1 class="similiar-header w-60 h-7">Donate Bangladesh</h1>
+        </div>
+
+        <div class="flex justify-between items-center w-28">
+            <img src="assets/coin.png" alt=""> <p>5500 BDT</p>
+        </div>
+
+    </header>
+    <main></main>
+    <footer></footer>
     
 </body>
 </html>
