--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          
         <div class="flex items-center justify-center w-14 lg:w-80 lg:justify-between ">
             <img src="assets/logo.png" alt="">
-            <h1 class="similiar-header w-60 h-7 sm:w-4 text-xs flex items-center ">Donate Bangladesh</h1>
+            <h1 class="similiar-header w-60 h-7 sm:w-4 text-xs flex items-center lg:w-56 lg:text-2xl ">Donate Bangladesh</h1>
         </div>
 
         <div class="flex justify-between items-center w-28">
