--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,8 @@
             <p>To perform any form of DOM manipulation, you have to access the document object first. Next we have the html root element which is a child of the document object. Next on the line are the body and head elements which are siblings to each other and children of the html element.</p>
           </div>
         </div>
-      </div></main>
+      </div>
+    </main>
     
       <script src="Js/blog-to-home.js"></script>
 </body>
